--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -2,6 +2,7 @@
   "name": "pokesystem",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -13,7 +14,9 @@
     "react-router-dom": "^5.0.0",
     "react_ujs": "^2.5.0",
     "redux": "^4.0.1",
-    "reselect": "^4.0.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
