--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -16,8 +16,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "webpack": "^4.0.0",
-    "tar": ">=4.4.2"
+    "tar": "^4.4.8",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
