--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -7,6 +7,7 @@
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
