--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -5,9 +5,10 @@
     "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
+    "axios": "^0.18.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
-    "core-js": "^3.0.1",
+    "core-js": "3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
