--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -11,7 +11,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-s-alert": "^1.4.1"
+    "react-s-alert": "^1.4.1",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
