--- a/pokesystem/Gemfile
+++ b/pokesystem/Gemfile
@@ -6,7 +6,7 @@ ruby '2.6.0'
 
 gem 'poke-api-v2'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.2.3'
+gem 'rails', '~> 5.2.2'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 # Use Puma as the app server
@@ -20,6 +20,7 @@ gem 'uglifier', '>= 1.3.0'
 # Webpack and React
 gem 'webpacker'
 gem 'react-rails'
+gem 'responders'
 
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'mini_racer', platforms: :ruby
