--- a/pokesystem/package.json
+++ b/pokesystem/package.json
@@ -2,16 +2,22 @@
   "name": "pokemon-manager",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "^7.0.0",
-    "@rails/webpacker": "^4.0.0-rc.7",
+    "@rails/webpacker": "^4.0.2",
     "axios": "^0.18.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.23",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-polyfill": "^6.26.0",
+    "core-js": "3",
     "pikaday": "^1.8.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-s-alert": "^1.4.1",
+    "react_ujs": "^2.5.0",
+    "reselect": "^4.0.0",
+    "tar": "^4.4.8",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
@@ -20,6 +26,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.3.1"
   }
 }
